# MCP-workshop-MS

./: .gitignore  README.md  gpt_utils.py  mcp_client_azure.py  mcp_client_openai.py  pyproject.toml  rss_feed_mcp.py  server.py  ~
ollama/: mcp_client_ollama.py  ollama_utils.py
workshop_utils/: SERP-pyproject,toml  cline_mcp_settings.json  step_by_step_init.txt  utils_mcp_settings.json
